# calcul

./: CMakeLists.txt  Doxyfile  README.md  T1.h  TP.sln  TP.vcxproj  main.cpp  push_pop.cpp
Mytest/: CMakeLists.txt  Mytest.vcxproj  test.cpp
TP/: CMakeLists.txt  TP.vcxproj.filters  main.cpp
calc/: CMakeLists.txt  c1.h  calc.vcxproj  calc.vcxproj.filters  getch_un.cpp  getops.cpp
